--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ postmarketos-wiki-doc (20230920-1) unstable; urgency=medium
 
   * New upstream release.
 
+ --  <aaloytorrens@gmail.com>  Wed, 20 Sep 2023 11:11:52 +0200
+
+postmarketos-wiki-doc (20230920-1) unstable; urgency=medium
+
+  * New upstream release.
+
  --  <aaloytorrens@gmail.com>  Wed, 20 Sep 2023 11:07:56 +0200
 
 postmarketos-wiki-doc (20230901-1) unstable; urgency=medium
