--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20231001-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sun, 01 Oct 2023 06:53:48 +0200
+
 postmarketos-wiki-doc (20230920-1) unstable; urgency=medium
 
   * New upstream release.
