--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240101-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Mon, 01 Jan 2024 06:53:59 +0100
+
 postmarketos-wiki-doc (20231201-1) unstable; urgency=medium
 
   * New upstream release.
