--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240201-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Thu, 01 Feb 2024 06:53:52 +0100
+
 postmarketos-wiki-doc (20240101-1) unstable; urgency=medium
 
   * New upstream release.
