--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240301-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Fri, 01 Mar 2024 06:53:51 +0100
+
 postmarketos-wiki-doc (20240201-1) unstable; urgency=medium
 
   * New upstream release.
