--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240401-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Mon, 01 Apr 2024 06:53:54 +0200
+
 postmarketos-wiki-doc (20240301-1) unstable; urgency=medium
 
   * New upstream release.
