--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240501-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Wed, 01 May 2024 06:53:51 +0200
+
 postmarketos-wiki-doc (20240401-1) unstable; urgency=medium
 
   * New upstream release.
