--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240601-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sat, 01 Jun 2024 06:54:31 +0200
+
 postmarketos-wiki-doc (20240501-1) unstable; urgency=medium
 
   * New upstream release.
