--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240701-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Mon, 01 Jul 2024 06:53:57 +0200
+
 postmarketos-wiki-doc (20240601-1) unstable; urgency=medium
 
   * New upstream release.
