--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240801-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Thu, 01 Aug 2024 06:53:45 +0200
+
 postmarketos-wiki-doc (20240701-1) unstable; urgency=medium
 
   * New upstream release.
