--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20240901-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sun, 01 Sep 2024 06:53:59 +0200
+
 postmarketos-wiki-doc (20240801-1) unstable; urgency=medium
 
   * New upstream release.
