--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20241001-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Tue, 01 Oct 2024 06:54:05 +0200
+
 postmarketos-wiki-doc (20240901-1) unstable; urgency=medium
 
   * New upstream release.
