--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20241101-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Fri, 01 Nov 2024 06:54:04 +0100
+
 postmarketos-wiki-doc (20241001-1) unstable; urgency=medium
 
   * New upstream release.
