--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20241201-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sun, 01 Dec 2024 06:53:48 +0100
+
 postmarketos-wiki-doc (20241101-1) unstable; urgency=medium
 
   * New upstream release.
