--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250101-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Wed, 01 Jan 2025 06:54:17 +0100
+
 postmarketos-wiki-doc (20241201-1) unstable; urgency=medium
 
   * New upstream release.
