--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250301-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sat, 01 Mar 2025 06:54:05 +0100
+
 postmarketos-wiki-doc (20250201-1) unstable; urgency=medium
 
   * New upstream release.
