--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250401-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Tue, 01 Apr 2025 06:54:18 +0200
+
 postmarketos-wiki-doc (20250301-1) unstable; urgency=medium
 
   * New upstream release.
