--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250701-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Tue, 01 Jul 2025 06:54:25 +0200
+
 postmarketos-wiki-doc (20250601-1) unstable; urgency=medium
 
   * New upstream release.
