--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250801-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Fri, 01 Aug 2025 06:54:15 +0200
+
 postmarketos-wiki-doc (20250701-1) unstable; urgency=medium
 
   * New upstream release.
