--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20250901-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Mon, 01 Sep 2025 06:54:23 +0200
+
 postmarketos-wiki-doc (20250801-1) unstable; urgency=medium
 
   * New upstream release.
