--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20251101-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Sat, 01 Nov 2025 06:54:31 +0100
+
 postmarketos-wiki-doc (20251016-1) unstable; urgency=medium
 
   * New upstream release.
