--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+postmarketos-wiki-doc (20251201-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ --  <aaloytorrens@gmail.com>  Mon, 01 Dec 2025 06:54:32 +0100
+
 postmarketos-wiki-doc (20251101-1) unstable; urgency=medium
 
   * New upstream release.
